# Hackathon-II-Todo-Cli

./: .gitignore  CLAUDE.md  COMPLETE-SESSION-SUMMARY.md  DEPLOYMENT-REFERENCE.md  FINAL_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  README.md  main.py  pyproject.toml  response.json  vercel.json
.claude/: settings.local.json
.claude/agents/: README.md  ai-devops-observer.md  docker-container-manager.md  helm-deployment-manager.md  k8s-ops.md  phase-01-console.md  phase-02-backend-api.md  phase-02-data-persistence.md  phase-02-frontend-arch.md  phase-02-fullstack.md  phase-02-integration.md  phase-03-agent-orchestration.md  phase-03-ai-interaction.md  (+6 more)
phase-01-in-memory-console/: README.md
phase-02-fullstack-web/: DEPLOYMENT-REFERENCE.md  FRONTEND-BACKEND-INTEGRATION.md  HUGGINGFACE-DEPLOYMENT.md  README.md
phase-03-ai-chatbot/: AUTHENTICATION.md  CHATBOT_FIX_SUMMARY.md  HUGGINGFACE_BACKEND_LOCATION.md  LANDING_PAGE_SUMMARY.md  QUICKSTART_VALIDATION.md  README.md
phase-04-k8s-local/: CHEAT-SHEET.md  CONTAINERIZATION-STATUS.md  POWERSHELL-DEMO-GUIDE.md  QUICK-START-DEMO.md  README.md
phase-04-k8s-local/backend/: .dockerignore  =0.25.0  fix_messages_table.py  pyproject.toml  todo.db
phase-04-k8s-local/backend/migrations/: add_conversations.sql  add_priority_to_tasks.sql
phase-04-k8s-local/backend/src/api/: chat.py  tasks.py
phase-04-k8s-local/backend/src/core/: config.py
phase-04-k8s-local/backend/src/models/: __init__.py  conversation.py
phase-04-k8s-local/backend/src/services/: agent_service.py
phase-05-cloud-deploy/: AGENTS.md  CLAUDE.md  README.md
(+412 files in other folders)
